# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
hexlet-code/: Makefile
page_analyzer/: __init__.py  app.py  db_queries.py  formatting_result_db_queries.py  parsing_url.py  validation_url.py
page_analyzer/templates/: 404.html  500.html  footer.html  header.html  index.html  url_page.html  urls.html
